# webcam_eyetracking_dl

./: .gitignore  GeDDNet.py  README.md  geddnet.py  live_demo.py  pyproject.toml  requirements.txt  train_model.py  utils.py
Geddnet_Orig/: GeDDNet.ipynb  GeDDNet.py  data_visualize.ipynb  train.ipynb
model_training/webcam_eyetracking/: _utils.py  gaze_dataset.py  train_model.py  utils.py
model_training/webcam_eyetracking/model_training_config/: hyperparams.json
model_training_config/: hyperparams.json
reports/Geddnet_webcam_exp/: hyperparams.json
reports/Geddnet_webcam_exp/config0/runs0/: diag_metric_file.txt  euc_metric_file.txt  loss_file.txt
