[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "webcam-eyetracking"
version = "0.1.0"
description = "Experiments for Semanux's Webcam Eyetracking."
authors = [
    "Srinivas Kumar Ramdas <hotshotsrini@hotmail.com>" ,
    "Lukas Schmelzeisen <me@lschmelzeisen.com>",
]
readme = "README.md"
repository = "https://github.com/semanux/webcam-eyetracking/"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/semanux/webcam-eyetracking/issues"

[tool.poetry.dependencies]
Flask = "^2.1.2"
matplotlib = "^3.5.2"
mediapipe = "^0.8.10"
numpy = "^1.23.0"
pandas = "^1.4.3"
python = "^3.8"
scikit-learn = "^1.1.1"
seaborn = "^0.11.2"
torch = "^1.12.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.961"
